Update MigrateCollectionsSingletonMap.java